syntax = "proto3";

option csharp_namespace = "loginAppRedis.Services";

import "protos/enums.proto";

service CacheService {
	rpc GetCache(CacheReqMessage) returns (CacheResMessage);
	rpc UpdateCache(CacheReqMessage) returns (CacheResMessage);
}

message CacheReqMessage
{
	string UserName = 1;
}


message CacheResMessage
{
	bool isLocked = 1;
}
